force/src/objects/Test_Case__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents a case for which you would run a test script.</description>
    <fields>
        <fullName>Capability__c</fullName>
        <formula>Test_Script__r.Request__r.Capability__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_failures__c</fullName>
        <label>Execution failures</label>
        <summaryFilterItems>
            <field>Test_Execution__c.Result__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Execution__c.Test_Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Profile_Executed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profile Executed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Script__c</fullName>
        <label>Test Script</label>
        <referenceTo>Test_Script__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Testing_Stage__c</fullName>
        <label>Testing Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SIT</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Test_Executions__c</fullName>
        <label># of Test Executions</label>
        <summaryForeignKey>Test_Execution__c.Test_Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Test Case</label>
    <listViews>
        <fullName>ALl_UAT_Lead_Management_Test_Cases</fullName>
        <columns>NAME</columns>
        <columns>Test_Script__c</columns>
        <columns>Profile_Executed__c</columns>
        <columns>Testing_Stage__c</columns>
        <columns>of_Test_Executions__c</columns>
        <columns>Capability__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Capability__c</field>
            <operation>equals</operation>
            <value>Lead Management,Opportunity Management,Task</value>
        </filters>
        <filters>
            <field>Testing_Stage__c</field>
            <operation>equals</operation>
            <value>UAT</value>
        </filters>
        <label>All UAT Lead Management Test Cases</label>
    </listViews>
    <listViews>
        <fullName>Account_Management_Cases</fullName>
        <columns>NAME</columns>
        <columns>Profile_Executed__c</columns>
        <columns>Test_Script__c</columns>
        <columns>Comments__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>Capability__c</columns>
        <columns>of_Test_Executions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Capability__c</field>
            <operation>equals</operation>
            <value>Account Management</value>
        </filters>
        <label>Account Management Test Cases</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Profile_Executed__c</columns>
        <columns>Testing_Stage__c</columns>
        <columns>Capability__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_UAT_Account_Management_Test_Cases</fullName>
        <columns>NAME</columns>
        <columns>Test_Script__c</columns>
        <columns>Capability__c</columns>
        <columns>Profile_Executed__c</columns>
        <columns>of_Test_Executions__c</columns>
        <columns>Testing_Stage__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Capability__c</field>
            <operation>equals</operation>
            <value>Account Management</value>
        </filters>
        <filters>
            <field>Testing_Stage__c</field>
            <operation>equals</operation>
            <value>UAT</value>
        </filters>
        <filters>
            <field>Test_Script__c</field>
            <operation>notContain</operation>
            <value>CRM 25</value>
        </filters>
        <label>All UAT Account Management Test Cases</label>
    </listViews>
    <listViews>
        <fullName>All_UAT_Case_Management_Test_Cases</fullName>
        <columns>NAME</columns>
        <columns>Capability__c</columns>
        <columns>Profile_Executed__c</columns>
        <columns>Testing_Stage__c</columns>
        <columns>Test_Script__c</columns>
        <columns>of_Test_Executions__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Capability__c</field>
            <operation>equals</operation>
            <value>Case Management</value>
        </filters>
        <filters>
            <field>Testing_Stage__c</field>
            <operation>equals</operation>
            <value>UAT</value>
        </filters>
        <label>All UAT Case Management Test Cases</label>
    </listViews>
    <listViews>
        <fullName>All_UAT_Network_Recruitment_Test_Cases</fullName>
        <columns>NAME</columns>
        <columns>Test_Script__c</columns>
        <columns>Profile_Executed__c</columns>
        <columns>Capability__c</columns>
        <columns>of_Test_Executions__c</columns>
        <columns>Testing_Stage__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Capability__c</field>
            <operation>contains</operation>
            <value>recruit</value>
        </filters>
        <filters>
            <field>Testing_Stage__c</field>
            <operation>equals</operation>
            <value>UAT</value>
        </filters>
        <label>All UAT Network Recruitment Test Cases</label>
    </listViews>
    <listViews>
        <fullName>All_UAT_Test_Cases</fullName>
        <columns>NAME</columns>
        <columns>Test_Script__c</columns>
        <columns>Capability__c</columns>
        <columns>Profile_Executed__c</columns>
        <columns>of_Test_Executions__c</columns>
        <columns>Testing_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Testing_Stage__c</field>
            <operation>equals</operation>
            <value>UAT</value>
        </filters>
        <label>All UAT Test Cases</label>
    </listViews>
    <listViews>
        <fullName>Case_Management_Cases</fullName>
        <columns>NAME</columns>
        <columns>Test_Script__c</columns>
        <columns>Profile_Executed__c</columns>
        <columns>Capability__c</columns>
        <columns>Comments__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>of_Test_Executions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Capability__c</field>
            <operation>equals</operation>
            <value>Case Management</value>
        </filters>
        <label>Case Management Test Cases</label>
    </listViews>
    <listViews>
        <fullName>Lead_Management_Test_Cases</fullName>
        <columns>NAME</columns>
        <columns>Test_Script__c</columns>
        <columns>Profile_Executed__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>Comments__c</columns>
        <columns>Capability__c</columns>
        <columns>of_Test_Executions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Capability__c</field>
            <operation>equals</operation>
            <value>Lead Management</value>
        </filters>
        <label>Lead Management Test Cases</label>
    </listViews>
    <listViews>
        <fullName>Recruiting_Management_Cases</fullName>
        <columns>NAME</columns>
        <columns>Test_Script__c</columns>
        <columns>Profile_Executed__c</columns>
        <columns>Capability__c</columns>
        <columns>Comments__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>of_Test_Executions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Capability__c</field>
            <operation>contains</operation>
            <value>network</value>
        </filters>
        <label>Recruiting Management Test Cases</label>
    </listViews>
    <nameField>
        <displayFormat>TestCase-{0000000000}</displayFormat>
        <label>Test Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>